# fletched

./: README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docs.yml  publish.yml
docs/: RoutedApp.md  controls.md  index.md  mvp.md  routedapp.md
flet_routed_app/: __init__.py  app.py  app_protocol.py  auth.py  page_not_found.py  routing.py  state.py  view_builder.py
fletched/: __init__.py
fletched/controls/: __init__.py  datatable.py
fletched/mvp/: __init__.py  datasource.py  dialog.py  error.py  model.py  presenter.py  renderer.py  view.py
fletched/mvp_utils/: __init__.py  datasource.py  error.py  observable.py  presenter.py  protocols.py  view.py
fletched/routed_app/: __init__.py  app.py  auth.py  routing.py  view_builder.py
