[tool.poetry]
name = "flet-routed-app"
version = "0.3.4"
description = "Tools to build flet apps with multiple views/routes"
authors = ["iron3oxide <jason.hottelet@tuta.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "flet_routed_app" }]
repository = "https://github.com/iron3oxide/flet-routed-app"

[tool.poetry.dependencies]
python = "^3.10"
repath = "^0.9.0"
flet = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
